fixed center align, added boxshadow en darkmode

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -4,23 +4,27 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap");
+
 /*  */
 
 html {
   --white: #fbfbfb;
-  --black: #1a191b;
-  --creme: #7ba6b9;
+  --black: #121212;
+  --creme: #fefbf6;
+  --grey: #a9a9a9;
 
-  --primary-one: #e86334;
-  --primary-two: #638ea2;
-  --secondary-one: #7ba6b9;
-  --secondary-two: #7ba6b9;
-  --secondary-three: #f4a914;
-  --secondary-four: #b44c2c;
+  --dark: #230704;
+
+  --color-one: #e86334;
+  --color-two: #f4a914;
+  --color-three: #f86f03;
+  --color-four: #b44c2c;
+  --color-five: #7ba6b9;
 
   --font-regular: "Inter", Arial, helvetica, sans-serif;
-  --font-two: "Single Day", cursive, "inter", Arial, helvetica, sans-serif;
-  --font-three: "Press Start 2P", system-ui, Arial, helvetica, sans-serif;
+  --font-two: "Press Start 2P", system-ui, Arial, helvetica, sans-serif;
+  --font-three: "Titillium Web", sans-serif, Arial, helvetica, sans-serif;
 
   --spac-one: 0.8rem;
   --spac-two: 0.4rem;
@@ -34,15 +38,22 @@ html {
 }
 
 body {
-  height: 100vh;
-  width: 100vw;
-  font-family: var(--font-regular);
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
+  width: 100vw;
+  font-family: var(--font-regular);
   color: var(--black);
+  background-color: var(--creme);
   padding: 0;
   margin: 0;
+  /* background-image: 
+    linear-gradient(45deg, var(--color-four) 25%, transparent 25%),
+    linear-gradient(-45deg, var(--color-four) 25%, transparent 25%),
+    linear-gradient(45deg, transparent 75%, var(--color-four) 75%),
+    linear-gradient(-45deg, transparent 75%, var(--color-four) 75%);
+  background-size: 60px 60px; */
 }
 
 main {
@@ -57,33 +68,73 @@ main {
 
 .card-container {
   display: flex;
-  margin-top: 10.5rem;
-  margin-bottom: 3rem;
-}
-
-.card {
   position: relative;
-  transition: transform 1s ease-in-out;
+  border-radius: 6px;
+  transition: all 1s ease-in-out;
   transform-style: preserve-3d;
   perspective: 1500px;
 }
 
-.page {
+.card {
   width: 17rem;
   height: 13rem;
-  padding: var(--spac-two);
+  transition: all 1s ease-in-out;
+}
+
+.shadow-box {
+  position: relative;
+  background: transparent;
+  width: 19rem;
+  height: 18rem;
+  box-shadow: 1px 5px 30px 10px var(--black);
+  border-radius: 6px;
+  transition: box-shadow 0.9s linear, height 1.2s ease-in-out,
+    background-color 0.7s ease-in-out;
+}
+
+.page {
+  width: 19rem;
+  height: 18rem;
+  padding: var(--spac-one);
   border-radius: 6px;
   border: 2px solid var(--black);
-  transition: transform 1s ease-in-out;
+  transition: all 1s ease-in-out;
   transform-style: preserve-3d;
+
+  h1 {
+    font-family: var(--font-two);
+    font-size: 4rem;
+    color: var(--white);
+    -webkit-text-stroke: 1px var(--black);
+  }
+
+  h2 {
+    font-family: var(--font-two);
+    font-size: 1.5rem;
+    text-align: justify;
+  }
+
+  h3 {
+    font-family: var(--font-two);
+    font-size: 1.3rem;
+  }
+
+  p {
+    font-family: var(--font-three);
+    font-size: 1rem;
+  }
+
+  li {
+    list-style: none;
+  }
 }
 
 .page-1 {
   position: absolute;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  background-color: var(--primary-two);
+  grid-template-rows: 70% 30%;
+  background-color: var(--color-one);
   backface-visibility: hidden;
   transform-origin: top;
   z-index: 3;
@@ -94,54 +145,155 @@ main {
     align-self: flex-end;
     justify-self: end;
     border-radius: 30%;
+    z-index: 3;
   }
 
   h1 {
-    color: var(--white);
-    -webkit-text-stroke: 2px var(--black);
-    text-stroke: 2px var(--black);
-    font-family: var(--font-three);
-    font-size: 4rem;
     grid-column: 1/3;
     grid-row: 1/2;
     align-self: flex-end;
+    z-index: 1;
   }
 
   p {
+    font-family: var(--font-two);
+    font-size: 1.5rem;
     grid-column: 1/2;
     grid-row: 2/3;
     align-self: self-start;
-    justify-self: end;
+    justify-self: center;
+    padding-left: var(--spac-two);
   }
 }
 
 .page-2 {
   position: absolute;
-  background-color: var(--secondary-three);
+  background-color: var(--color-two);
   transform: rotateX(180deg);
   backface-visibility: hidden;
   transform-origin: bottom;
-  translate: 0 -13rem;
+  translate: 0 -18rem;
   z-index: 3;
 
-  p {
-    margin: var(--spac-three);
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 2.5rem 1fr 1fr;
+
+  h2 {
+    grid-column: 1/4;
+    grid-row: 1/2;
+  }
+
+  ul {
+    grid-column: 1/4;
+    grid-row: 2/3;
+  }
+
+  li {
+    margin: var(--spac-two);
+    max-width: 30ch;
+  }
+
+  img {
+    grid-column: 2/4;
+    grid-row: 2/4;
+    align-self: flex-end;
+    justify-self: center;
+    border-radius: 30%;
+  }
+
+  .buttons {
+    grid-column: 1/3;
+    grid-row: 3/4;
+    align-self: center;
+    justify-self: center;
+
+    a {
+      color: var(--black);
+      font-size: 2.5rem;
+    }
+
+    a:visited {
+      color: var(--black);
+    }
   }
 }
 
 .page-3 {
-  background-color: var(--primary-one);
+  background-color: var(--color-three);
   position: absolute;
   backface-visibility: hidden;
   z-index: 1;
+
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 2.5rem 1fr 1fr;
+
+  h2 {
+    grid-column: 1/4;
+    grid-row: 1/2;
+  }
+
+  p {
+    grid-column: 1/4;
+    grid-row: 2/3;
+  }
 }
+
+/* .page-4 {
+  background-color: var(--color-five);
+  display: none;
+} */
 
 /** functionality */
 
-.card:hover .page-1 {
+.card-container:hover .page-1 {
   transform: rotatex(-180deg);
 }
 
-.card:hover .page-2 {
+.card-container:hover .page-2 {
   transform: rotateX(0deg);
+}
+
+.card-container:hover .shadow-box {
+  height: 31rem;
+  background-color: var(--black);
+}
+
+.card:hover {
+  translate: 0 13rem;
+}
+
+/** click button */
+
+/* .show {
+  display: block;
+  translate: 0 10rem;
+} */
+
+/** dark mode? */
+
+@media (prefers-color-scheme: dark) {
+  html {
+    --black: #140a09;
+    --color-one: #6e0d10;
+    --color-two: #7b242b;
+    --color-three: #67171e;
+  }
+
+  body {
+    background-color: var(--dark);
+  }
+
+  .page {
+    color: var(--creme);
+  }
+
+  .page-1 p {
+    color: var(--black);
+  }
+
+  .buttons i {
+    color: var(--creme);
+  }
 }
